Mobile site changes. Fix gap b/t cover and bottom content

--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -276,12 +276,14 @@ body
       top: 0
       text-align: right
 @media only screen and (max-width: 640px) 
-  .img-background
-    min-height: 80vh
-  .title
+  body .img-background
+    height: 80vh
+  body .img-filter
+    height: 80vh
+  body .title
     margin-bottom: 0
   body .content a.icon
-    margin-top: 160px
+    margin-top: 320px
 
       
 
